# ItarimSystemFrontend

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: manifest.json  offline.html  sw.js
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/api/: habits.ts  index.ts  kanban.ts  profile.ts  tauri.ts
src/components/calendar/: MiniCalendar.vue
src/components/finances/: DebtModal.vue  TransactionModal.vue
src/components/habits/: BadHabitCard.vue  GoodHabitCard.vue  HabitModal.vue
src/components/kanban/: CardModal.vue  DatePicker.vue  KanbanCard.vue  KanbanColumn.vue
src/components/shared/: SideNav.vue  TimeSelect.vue  XpToast.vue
src/components/tasks/: TaskCard.vue  TaskModal.vue
src/components/workouts/: ExerciseModal.vue  UserMetricsModal.vue  UserProfileModal.vue  WorkoutLogModal.vue
src/router/: index.ts
src/stores/: finances.ts  habits.ts  kanban.ts  planner.ts  profile.ts  settings.ts  workouts.ts  xpToast.ts
src/types/: finances.ts  habits.ts  index.ts  kanban.ts  profile.ts  workouts.ts  workouts_models.ts
src/views/: FinancesView.vue  HabitsView.vue  KanbanView.vue  PlannerView.vue  ProfileView.vue  SettingsView.vue  WorkoutsView.vue
